Remove redundant add-opens