@@ -2058,7 +2058,6 @@
                                 <arg>-J--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
                                 <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                                 <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
                             </compilerArgs>
                               <annotationProcessorPaths>
                                 <path>
